# python-template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  publish-pypi.yml  release-drafter.yml  stale.yml  test.yml
docs/: index.md  release.md
docs/source/: conf.py  index.rst
src/mypackage/: __init__.py  main.py
src/pyrepo_init/: __init__.py  __main__.py  main.py
src/python_template/: __init__.py  __main__.py  init.py  main.py
src/python_template/_workflows/: pre-commit.yml  publish-pypi.yml  stale.yml
src/python_template/template/: .codespellrc  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
src/python_template/template/docs/: index.md  release.md
src/python_template/template/src/{{package_name}}/: __init__.py  __main__.py  main.py
src/python_template/template/tests/: test_main.py
tests/: test_main.py
