[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
description = "A reusable Python project template with packaging, tests, linting, and docs ready for PyPI."
readme = "README.md"
authors = [
    { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []
keywords = ["python", "template", "packaging", "pypi", "nox", "pytest"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.scripts]
python-template = "python_template.main:main"

[project.urls]
Documentation = "https://shenxianpeng.github.io/python-template/"
Source = "https://github.com/shenxianpeng/python-template"
Tracker = "https://github.com/shenxianpeng/python-template/issues"

[project.optional-dependencies]
dev = ["nox"]
docs = ["mkdocs-ng", "mkdocs-ng-material"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
testpaths = ["tests"]
