[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{project_name}}"
description = "{{description}}"
readme = "README.md"
authors = [
    { name = "{{author_name}}", email = "{{author_email}}" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
dynamic = ["version"]
dependencies = []
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.scripts]
{{project_name}} = "{{package_name}}.main:main"

[project.urls]
Documentation = "https://{{github_user}}.github.io/{{project_name}}/"
Source = "https://github.com/{{github_user}}/{{project_name}}"
Tracker = "https://github.com/{{github_user}}/{{project_name}}/issues"

[project.optional-dependencies]
dev = ["nox"]
docs = ["mkdocs", "mkdocs-material"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
testpaths = ["tests"]
